<resources>
    <string name="app_name">Food Tracker App</string>

    // MENU BUTTONS
    <string name="home_menu_botton">Home</string>
    <string name="add_food_menu_button">Add Food Item</string>
    <string name="list_day_summaries_menu_button">List Daily Summaries</string>
    <string name="list_all_menu_button">List All Items</string>
    <string name="settings_menu_button">Settings</string>

    // PAGE TITLES
    <string name="welcome_title">Welcome to \'Food Tracker App.\'</string>

    // SETTINGS page
    <string name="set_target_button">Set Daily Targets</string>

    // ADD food page
    <string name="type_spinner_label">Pick Item Type:</string>
    <string name="spinner_tool_tip">Choose Type of Entry</string>

    <string name="size_title">Pick Size (cals/mls):</string>
    <string name="large_food_radio">Large</string>
    <string name="medium_food_radio">Medium</string>
    <string name="small_food_radio">Small</string>

    <string name="enter_calories">Type cal/ml manually to OVERRIDE presets:</string>
    <string name="default_calories">0</string>

    <string name="description_label">Give description:</string>

    <string name="fiveAday_label"># Fruit/Veg portions?:</string>
    <string name="fiveAday_value">0</string>

    <string name="date_label">(click date change it)</string>

    <string name="submit_food_button">Submit item</string>


    <string-array name="food_type">
        <item>Meal</item>
        <item>Snack</item>
        <item>Water</item>
        <item>Activity</item>
    </string-array>

    <string name="title_activity_add_confirmation">AddConfirmationActivity</string>


    // Full list of items view
    <string name="full_item_view_calLabel">Cal/ml:</string>
    <string name="full_item_list_fiveAday_label"># Fruit/Veg:</string>

    // Week Summary List
    <string name="week_summary_list_label">Daily Average for last 7 days:</string>
    <string name="week_summary_date_label">Week From:</string>
    <string name="week_summary_average_cals">Avg Daily cal:</string>
    <string name="week_summary_avg_water_label">Avg Water ml:</string>
    <string name="week_summary_avg_5day_label">Avg # Fruit + Veg:</string>

    // Day Summary List
    <string name="day_summary_calories_label">Cal:</string>
    <string name="day_summary_water_label">Water:</string>
    <string name="day_summary_water_units">ml</string>
    <string name="day_summary_fiveAday_label"># Fruit + Veg:</string>
    <string name="daySummaryBackButton">Back</string>
    <string name="dailyAverageMonth">Daily Average for last 30 days:</string>
    <string name="DaySummaryTitle">Items for:</string>
    <string name="TodaySummaryTitle">Todays Progress:</string>


</resources>
