<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/week_summary_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/week_summary_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/week_summary_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/week_summary_date_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2018/03/22" />

    <TextView
        android:id="@+id/week_summary_avg_cals_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/week_summary_average_cals"
        app:layout_constraintEnd_toStartOf="@+id/week_summary_avg_cals"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/week_summary_avg_cals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2200" />

    <TextView
        android:id="@+id/week_summary_avg_5day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/week_summary_avg_5day_label"
        app:layout_constraintEnd_toStartOf="@+id/week_summary_avg_5day"
        app:layout_constraintTop_toBottomOf="@+id/week_summary_avg_cals_label" />

    <TextView
        android:id="@+id/week_summary_avg_5day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week_summary_avg_cals"
        tools:text="3" />

    <TextView
        android:id="@+id/week_summary_average_water_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/week_summary_avg_water_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week_summary_date_label" />

    <TextView
        android:id="@+id/week_summary_avg_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/week_summary_average_water_label"
        app:layout_constraintTop_toBottomOf="@+id/week_summary_date"
        tools:text="1800" />
</android.support.constraint.ConstraintLayout>