<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab.codeclan.foodtrackerapp.Activities.AddFoodActivity">

    <TextView
        android:id="@+id/addFoodTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_food_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/size"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:checkedButton="@+id/medium_food_radio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_label">

        <RadioButton
            android:id="@+id/large_food_radio"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/large_food_radio"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="106dp" />

        <RadioButton
            android:id="@+id/medium_food_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/medium_food_radio"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="138dp" />

        <RadioButton
            android:id="@+id/small_food_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/small_food_radio"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="170dp" />
    </RadioGroup>

    <Button
        android:id="@+id/add_food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/subit_food_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/num_fiveAday"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_marginEnd="164dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size"
        tools:text="5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="# of 5 a day:"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/calories_textView"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="512"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/calories_editText" />

    <EditText
        android:id="@+id/calories_editText"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/size_label" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="249dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFoodTitleTextView" />

    <TextView
        android:id="@+id/type_spinner_label"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/type_spinner_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/type_spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFoodTitleTextView" />

    <TextView
        android:id="@+id/size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/size_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_spinner_label" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="108dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/description_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="112dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:onClick="onClickDate"
        android:text="23/03/2018"
        android:textColor="@android:color/holo_purple"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_textView"
        tools:text="23/03/2018" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/date_textView"
        app:layout_constraintTop_toBottomOf="@+id/description_textView" />

</android.support.constraint.ConstraintLayout>
