<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onListClickItem">

    <TextView
        android:id="@+id/daySummaryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2018/03/26" />

    <TextView
        android:id="@+id/daySummaryFiveAday"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/daySummaryFiveADayLabel"
        app:layout_constraintTop_toBottomOf="@+id/daySummaryDate"
        tools:text="2" />

    <TextView
        android:id="@+id/daySummaryCalories"
        android:layout_width="73dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_purple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daySummaryDate"
        tools:text="1800" />

    <TextView
        android:id="@+id/daySummaryWater"
        android:layout_width="67dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/daySummaryWaterUnit"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="450" />

    <TextView
        android:id="@+id/daySummaryWaterLabel"
        android:layout_width="64dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/day_summary_water_label"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/daySummaryWater"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daySummaryCaloriesLabel"
        android:layout_width="41dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/day_summary_calories_label"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/daySummaryCalories"
        app:layout_constraintTop_toBottomOf="@+id/daySummaryDate" />

    <TextView
        android:id="@+id/daySummaryFiveADayLabel"
        android:layout_width="125dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/day_summary_fiveAday_label"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daySummaryDate" />

    <TextView
        android:id="@+id/daySummaryWaterUnit"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/day_summary_water_units"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>